--- a/GitVersionExe/GitVersionExe.csproj
+++ b/GitVersionExe/GitVersionExe.csproj
@@ -58,6 +58,10 @@
     <Reference Include="LibGit2Sharp">
       <HintPath>..\packages\LibGit2Sharp.0.19.0.0\lib\net40\LibGit2Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.5\lib\net40-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
@@ -78,6 +82,7 @@
     <Compile Include="AssemblyInfoFileUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="GemAssets\.rspec" />
     <None Include="GemAssets\bin\gitversion" />
     <None Include="GemAssets\Gemfile" />
