--- a/GitVersionExe/packages.config
+++ b/GitVersionExe/packages.config
@@ -5,6 +5,7 @@
   <package id="Fody" version="1.26.2" targetFramework="net40" developmentDependency="true" />
   <package id="JetBrainsAnnotations.Fody" version="1.0.2" targetFramework="net40" developmentDependency="true" />
   <package id="LibGit2Sharp" version="0.19.0.0" targetFramework="net40" />
+  <package id="log4net" version="2.0.5" targetFramework="net40" />
   <package id="PepitaPackage" version="1.21.4" targetFramework="net40" developmentDependency="true" />
   <package id="Visualize.Fody" version="0.4.0.0" targetFramework="net40" developmentDependency="true" />
 </packages>
