--- a/GitVersionExe/App.config
+++ b/GitVersionExe/App.config
@@ -7,6 +7,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
 
+  <appSettings>
+    <add key="Beta-branch-name" value="beta" />
+    <add key="Production-branch-name" value="production" />
+  </appSettings>
+  
   <log4net>
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
@@ -17,14 +22,14 @@
     <appender name="AllRollingFile" type="log4net.Appender.RollingFileAppender">
       <file value="AllLogData.log" />
       <appendToFile value="true" />
-      <maximumFileSize value="1000000KB" />
+      <maximumFileSize value="10000KB" />
       <maxSizeRollBackups value="10" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %level %thread %logger - %message%newline" />
       </layout>
     </appender>
     <root>
-      <level value="DEBUG" />
+      <level value="ERROR" />
       <!--<appender-ref ref="Console" />-->
       <appender-ref ref="AllRollingFile" />
     </root>
